Describir los datos

--- a/Copia_de_Lab3.ipynb
+++ b/Copia_de_Lab3.ipynb
@@ -38,7 +38,7 @@
         },
         "outputId": "29831554-e341-4d75-ebba-87f8143a599b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,7 +381,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,7 +521,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,6 +558,255 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Describir los datos\n",
+        "\n",
+        "### ¿Cuál es el formato de los datos?\n",
+        "\n",
+        "El formato de los datos que hemos estado manipulando, es principalmente estructurado. Esto significa que los datos están organizados en filas y columnas, donde cada columna tiene un tipo de datos específico como entero, decimal, cadena de texto, etc.\n"
+      ],
+      "metadata": {
+        "id": "zRRZ-sRqiy2U"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ¿Cuál es el método utilizado para capturar los datos?\n",
+        "El método utilizado para capturar los datos fue a través de la carga de un archivo CSV.\n",
+        "\n",
+        "### ¿Qué tamaño tiene la base de datos (en número de filas y columnas)?"
+      ],
+      "metadata": {
+        "id": "5qy4JCULlNvH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cargar el archivo CSV como un DataFrame\n",
+        "df0 = spark.read.option(\"header\", \"true\").csv(ruta_archivo)\n",
+        "\n",
+        "# Obtener el tamaño del DataFrame (número de filas y columnas)\n",
+        "num_filas = df0.count()\n",
+        "num_columnas = len(df0.columns)\n",
+        "\n",
+        "# Imprimir el tamaño del DataFrame CSV\n",
+        "print(f\"Tamaño del DataFrame CSV: {num_filas} filas y {num_columnas} columnas.\")\n",
+        "\n",
+        "# Imprimir tamaño del DataFrame original (df)\n",
+        "num_filas_df = df.count()\n",
+        "num_columnas_df = len(df.columns)\n",
+        "print(f\"Tamaño del DataFrame original (df): {num_filas_df} filas y {num_columnas_df} columnas.\")\n",
+        "\n",
+        "# Imprimir tamaño del DataFrame limpio (df_cleaned)\n",
+        "num_filas_cleaned = df_cleaned.count()\n",
+        "num_columnas_cleaned = len(df_cleaned.columns)\n",
+        "print(f\"Tamaño del DataFrame limpio (df_cleaned): {num_filas_cleaned} filas y {num_columnas_cleaned} columnas.\")\n"
+      ],
+      "metadata": {
+        "id": "lBChKCSSljoY",
+        "outputId": "e01777d1-4099-408f-d736-771701bea81a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tamaño del DataFrame CSV: 8428 filas y 31 columnas.\n",
+            "Tamaño del DataFrame original (df): 8428 filas y 31 columnas.\n",
+            "Tamaño del DataFrame limpio (df_cleaned): 1228 filas y 31 columnas.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ¿Incluyen los datos una o más variables relevantes para la pregunta de negocio?\n",
+        "\n",
+        "Si, si nos enfocamos en predecir o analizar precios de mercado para finca raiz\n"
+      ],
+      "metadata": {
+        "id": "b3w9egAxmlwz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Imprimir el esquema del DataFrame\n",
+        "df_cleaned.printSchema()\n",
+        "\n",
+        "# Mostrar una vista previa de los datos\n",
+        "df_cleaned.show(5)\n"
+      ],
+      "metadata": {
+        "id": "llSzWPg_mmGj",
+        "outputId": "a9a46239-0292-4e95-aef5-4232b6764b75",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- habitaciones: string (nullable = true)\n",
+            " |-- baños: string (nullable = true)\n",
+            " |-- parqueaderos: string (nullable = true)\n",
+            " |-- area_construida: string (nullable = true)\n",
+            " |-- area_privada: string (nullable = true)\n",
+            " |-- estrato: string (nullable = true)\n",
+            " |-- estado: string (nullable = true)\n",
+            " |-- antiguedad: string (nullable = true)\n",
+            " |-- administracion: double (nullable = true)\n",
+            " |-- precio_m2: string (nullable = true)\n",
+            " |-- ascensor: string (nullable = true)\n",
+            " |-- circuito_cerrado_de_TV: string (nullable = true)\n",
+            " |-- parqueadero_visitantes: string (nullable = true)\n",
+            " |-- porteria_recepcion: string (nullable = true)\n",
+            " |-- zonas_verdes: string (nullable = true)\n",
+            " |-- salon_comunal: string (nullable = true)\n",
+            " |-- balcon: string (nullable = true)\n",
+            " |-- barra_estilo_americano: string (nullable = true)\n",
+            " |-- calentador: string (nullable = true)\n",
+            " |-- chimenea: string (nullable = true)\n",
+            " |-- citofono: string (nullable = true)\n",
+            " |-- cocina_integral: string (nullable = true)\n",
+            " |-- terraza: string (nullable = true)\n",
+            " |-- vigilancia: string (nullable = true)\n",
+            " |-- parques_cercanos: string (nullable = true)\n",
+            " |-- estudio: string (nullable = true)\n",
+            " |-- patio: string (nullable = true)\n",
+            " |-- deposito_bodega: string (nullable = true)\n",
+            " |-- nombre: string (nullable = true)\n",
+            " |-- ubicacion: string (nullable = true)\n",
+            " |-- precio: double (nullable = true)\n",
+            "\n",
+            "+------------+-----+------------+---------------+------------+-------+-----------+--------------+--------------+---------+--------+----------------------+----------------------+------------------+------------+-------------+------+----------------------+----------+--------+--------+---------------+-------+----------+----------------+-------+-----+---------------+-----------+----------------+-------+\n",
+            "|habitaciones|baños|parqueaderos|area_construida|area_privada|estrato|     estado|    antiguedad|administracion|precio_m2|ascensor|circuito_cerrado_de_TV|parqueadero_visitantes|porteria_recepcion|zonas_verdes|salon_comunal|balcon|barra_estilo_americano|calentador|chimenea|citofono|cocina_integral|terraza|vigilancia|parques_cercanos|estudio|patio|deposito_bodega|     nombre|       ubicacion| precio|\n",
+            "+------------+-----+------------+---------------+------------+-------+-----------+--------------+--------------+---------+--------+----------------------+----------------------+------------------+------------+-------------+------+----------------------+----------+--------+--------+---------------+-------+----------+----------------+-------+-----+---------------+-----------+----------------+-------+\n",
+            "|           1|    2|           1|             50|           0|      5|      bueno|   9 a 15 años|      310000.0|  6800000|       0|                     0|                     0|                 1|           0|            0|     1|                     0|         0|       0|       0|              1|      0|         0|               0|      0|    0|              1|apartamento|        contador|  3.4E8|\n",
+            "|           4|    3|           1|             90|           0|      4|      bueno|más de 30 años|      369000.0|  4000000|       1|                     0|                     1|                 1|           0|            1|     0|                     0|         1|       1|       1|              1|      1|         0|               0|      0|    0|              1|apartamento|      cedro golf|  3.6E8|\n",
+            "|           2|    3|           4|            322|         277|      6|no definida|    1 a 8 años|     2304000.0|  9000000|       1|                     1|                     0|                 0|           0|            0|     1|                     0|         1|       1|       1|              0|      0|         0|               0|      0|    0|              0|apartamento|     los rosales|2.898E9|\n",
+            "|           2|    2|           1|             75|          75|      4|  excelente|  16 a 30 años|      316000.0|  4200000|       0|                     0|                     1|                 1|           0|            1|     0|                     0|         1|       1|       1|              1|      0|         1|               0|      0|    0|              0|apartamento|         mazurén| 3.15E8|\n",
+            "|           3|    2|           1|            100|         100|      5|      bueno|  16 a 30 años|      440000.0|  5000000|       1|                     1|                     0|                 0|           0|            0|     1|                     0|         1|       0|       1|              1|      0|         0|               0|      1|    0|              1|apartamento|colina campestre|  5.0E8|\n",
+            "+------------+-----+------------+---------------+------------+-------+-----------+--------------+--------------+---------+--------+----------------------+----------------------+------------------+------------+-------------+------+----------------------+----------+--------+--------+---------------+-------+----------+----------------+-------+-----+---------------+-----------+----------------+-------+\n",
+            "only showing top 5 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ¿Qué tipos de datos están presentes (simbólicos, numéricos, etc.)?\n",
+        "\n",
+        "Según las directrices de IBM, el formato de los datos en el conjunto actual incluye principalmente:\n",
+        "\n",
+        "1. **Valores Numéricos:** Utilizados para variables como `precio`, `area_construida`, `estrato`, `administracion`, `habitaciones`, y `baños`. Estos valores son representaciones numéricas de atributos específicos de las propiedades.\n",
+        "\n",
+        "2. **Valores Categóricos:** Representados como cadenas de texto en variables como `ubicacion`, `estado`, y `antiguedad`. Estos campos describen características tales como la ubicación geográfica de las propiedades, su estado general y su antigüedad."
+      ],
+      "metadata": {
+        "id": "g736_OyVm-EU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Mostrar los tipos de datos de cada columna en el DataFrame\n",
+        "print(df_cleaned.dtypes)"
+      ],
+      "metadata": {
+        "id": "rD6GPt8CnEa5",
+        "outputId": "dd47f4be-d748-4b57-9e18-9b0292da6790",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('habitaciones', 'string'), ('baños', 'string'), ('parqueaderos', 'string'), ('area_construida', 'string'), ('area_privada', 'string'), ('estrato', 'string'), ('estado', 'string'), ('antiguedad', 'string'), ('administracion', 'double'), ('precio_m2', 'string'), ('ascensor', 'string'), ('circuito_cerrado_de_TV', 'string'), ('parqueadero_visitantes', 'string'), ('porteria_recepcion', 'string'), ('zonas_verdes', 'string'), ('salon_comunal', 'string'), ('balcon', 'string'), ('barra_estilo_americano', 'string'), ('calentador', 'string'), ('chimenea', 'string'), ('citofono', 'string'), ('cocina_integral', 'string'), ('terraza', 'string'), ('vigilancia', 'string'), ('parques_cercanos', 'string'), ('estudio', 'string'), ('patio', 'string'), ('deposito_bodega', 'string'), ('nombre', 'string'), ('ubicacion', 'string'), ('precio', 'double')]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ¿Ha calculado estadísticas básicas para las variables clave? ¿Qué información le ha proporcionado sobre la cuestión de negocio?\n",
+        "\n",
+        "Para calcular estadísticas básicas para las variables clave del conjunto de datos y obtener información relevante para la pregunta de negocio, utilizamnos funciones estadísticas disponibles en Spark como describe() y summary(). Estas funciones proporcionan un resumen estadístico que incluye el recuento de registros, la media, la desviación estándar, los valores mínimo y máximo, y los cuartiles para las columnas numéricas."
+      ],
+      "metadata": {
+        "id": "Gos2XnPwnmXX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importar funciones de Spark SQL\n",
+        "from pyspark.sql import functions as F\n",
+        "\n",
+        "# Calcular estadísticas básicas para las variables clave\n",
+        "df_cleaned.select(\"precio\", \"area_construida\", \"estrato\", \"administracion\", \"habitaciones\", \"baños\") \\\n",
+        "    .describe() \\\n",
+        "    .show(truncate=False)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "iPU6RIHhnmow",
+        "outputId": "b7450764-0f79-4dee-8d3c-af54ad63f16c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-------+-------------------+------------------+------------------+--------------------+------------------+------------------+\n",
+            "|summary|precio             |area_construida   |estrato           |administracion      |habitaciones      |baños             |\n",
+            "+-------+-------------------+------------------+------------------+--------------------+------------------+------------------+\n",
+            "|count  |1228               |1228              |1228              |1228                |1228              |1228              |\n",
+            "|mean   |7.088844186726384E8|133.32247557003257|4.257328990228013 |1066635.690553746   |3.122549019607843 |2.616830065359477 |\n",
+            "|stddev |7.392032811774138E8|122.39983613402062|1.2647448335372662|2.1395207257076625E7|1.7208304026784156|1.2804886193861416|\n",
+            "|min    |6.0E7              |1                 |1                 |1.0                 |1                 |1                 |\n",
+            "|max    |9.8E9              |98                |6                 |7.5E8               |no definida       |no definida       |\n",
+            "+-------+-------------------+------------------+------------------+--------------------+------------------+------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ¿Es capaz de priorizar las variables relevantes? Si no es así, ¿hay analistas de negocio disponibles para proporcionar más información?\n",
+        "\n",
+        "sería recomendable consultar con analistas de negocio disponibles. Ellos pueden ofrecer una perspectiva experta sobre qué variables son más críticas para abordar la pregunta de negocio específica, ayudando así a centrar el análisis en los factores que más impactan en los resultados deseados."
+      ],
+      "metadata": {
+        "id": "gasWOXV1ojyw"
+      }
     }
   ]
 }
